--- a/static/css/media.css
+++ b/static/css/media.css
@@ -20,11 +20,12 @@
         overflow-x: scroll;
     }
     .ind_header .indh_headerCon ul li {
+        padding: 0 !important;
         height: 50px !important;
         line-height: 50px !important;
     }
     .ind_header .indh_headerCon ul li a {
-        width: 100px !important;
+        width: 90px !important;
     }
     .ind_header .indh_headerCon .indh_search {
         display: none;
@@ -34,8 +35,7 @@
         width: 100% !important;
         flex: 1;
         overflow-y: auto;
-        margin: 0 !important;
-        padding-top: 20px;
+        margin: 0 auto !important;
     }
     .ind_content .ind_videoCont {
         justify-content: space-around;
@@ -44,5 +44,22 @@
         width: 30% !important;
         margin-right: 0 !important;
         height: auto !important;
+    }
+    .mobileSearch {
+        display: block !important;
+    }
+    .paging {
+        flex-direction: column;
+        height: auto;
+    }
+    .paging .prev_page_btn {
+        margin-right: 5px !important;
+    }
+    .paging .next_page_btn {
+        margin-left: 5px !important;
+    }
+    .paging span {
+        margin-left: 0 !important;
+        margin-top: 10px;
     }
 }
